Manoj: Complete backend implementation + AgentCore integration
- All 7 Lambda handlers implemented (agent_orchestrator, crop_advisory, weather_lookup, govt_schemes, farmer_profile, image_analysis, transcribe_speech)
- 5 utility modules (response_helper, error_handler, dynamodb_helper, translate_helper, polly_helper)
- Dual-format response support (API Gateway + Bedrock Agent)
- AgentCore integration: Strands Agent + BedrockAgentCoreApp entrypoint
- AgentCore tools: 6 @tool decorated Lambda wrappers
- setup_agentcore.py: Automated Gateway + Runtime deployment
- setup_bedrock_agent.py: Multi-agent Bedrock Agents (v2 supervisor)
- SAM template: AgentCoreRuntimeArn param + bedrock-agentcore permissions
- agent_orchestrator: Dual-mode (AgentCore Runtime preferred, Bedrock Agents fallback)
- 200 tests passing (108 unit + 92 smoke)
- PROGRESS_TRACKER.md for session continuity

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,14 @@ desktop.ini
 *.log
 *.zip
 *.tar.gz
+
+## Temp IAM/config files (created during setup)
+agent-trust-policy.json
+agent-permissions-policy.json
+kb-trust-policy.json
+kb-permissions-policy.json
+kb-config.json
+kb-storage-config.json
+aoss-enc-policy.json
+.bedrock_agentcore.yaml
+.venv313/
