feat: hybrid auth - API key (invoke_model) + IAM fallback (converse)
- If BEDROCK_API_KEY env var set: Bearer token auth via invoke_model
- If empty: boto3 converse API with IAM role credentials
- Removes hardcoded API key from code
- Anthropic<->Converse format conversion for unified agent loop
- Deployed to AgentCore, confirmed IAM path activates correctly

--- a/infrastructure/template.yaml
+++ b/infrastructure/template.yaml
@@ -51,6 +51,7 @@ Resources:
     Properties:
       CodeUri: ../backend/lambdas/agent_orchestrator/
       Handler: handler.lambda_handler
+      Timeout: 120
       Policies:
         - Version: '2012-10-17'
           Statement:
