feat: gTTS integration, STT multi-language support, model standardization to Claude Sonnet 4.5
- Replaced ElevenLabs with free gTTS for all Indic TTS (ta/te/kn/ml/mr/bn/gu/pa/or/as/ur)
- Fixed Tamil/Indic intent routing with native-language keyword detection
- Expanded Transcribe language map (5 -> 12 languages), added format auto-detection
- Fixed frontend STT response parsing (data.transcript -> data.data.transcript)
- Increased Transcribe Lambda timeout 30s -> 60s with proper S3 cleanup
- Standardized all model references to anthropic.claude-sonnet-4-5-20250929-v1:0
- Fixed Nova Pro -> Claude Sonnet 4.5 across all docs and code comments
- Added deploy helper, smoke test, and AgentCore specialist configs

--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,7 @@ BEDROCK_AGENT_ALIAS_ID=your_agent_alias_id_here
 BEDROCK_KB_ID=your_knowledge_base_id_here
 
 # Bedrock Model
-BEDROCK_MODEL_ID=anthropic.claude-sonnet-4-5-20250514
+BEDROCK_MODEL_ID=anthropic.claude-sonnet-4-5-20250929-v1:0
 
 # API Gateway (filled after sam deploy)
 API_GATEWAY_URL=https://YOUR_API_ID.execute-api.ap-south-1.amazonaws.com/prod
