--- a/backend/lambdas/agent_orchestrator/requirements.txt
+++ b/backend/lambdas/agent_orchestrator/requirements.txt
@@ -1,1 +1,3 @@
-# No external dependencies - boto3 is pre-installed in Lambda runtime
+# boto3 is pre-installed in Lambda runtime
+# gTTS: free Google Translate TTS for Indian languages (no API key needed)
+gTTS>=2.5.0
