docs: demo-ready README, detailed walkthrough script, cleanup gitignore
- Rewrote README with full architecture diagram, feature table, API endpoints, setup guide
- Added 7-scene demo script with talking points and pre-demo checklist
- Updated demo_video_link.md with detailed walkthrough, screenshot suggestions
- Added temp test artifacts to .gitignore
- All 6 smoke test features verified passing (weather/crop/pest/schemes/profile/Tamil)
- Production frontend bundle built (307KB JS + 21KB CSS)

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,23 @@ kb-storage-config.json
 aoss-enc-policy.json
 .bedrock_agentcore.yaml
 .venv313/
+
+## Temp debug/test artifacts
+*.out.json
+*_out.json
+*_out.txt
+inspect_event.json
+inspect_out.json
+invoke_event.json
+invoke_ta.json
+ta_audio_test.json
+ta_audio_out.json
+ta_out.json
+response_out.json
+payload_*.json
+resp_*.json
+verify_*.txt
+indic_audio_check.txt
+weather_out.json
+weather_payload.json
+.tools/
