--- a/infrastructure/template.yaml
+++ b/infrastructure/template.yaml
@@ -295,6 +295,9 @@ Resources:
     Properties:
       CodeUri: ../backend/lambdas/farmer_profile/
       Handler: handler.lambda_handler
+      Environment:
+        Variables:
+          DYNAMODB_OTP_TABLE: otp_codes
       Policies:
         - Version: '2012-10-17'
           Statement:
@@ -303,7 +306,26 @@ Resources:
                 - dynamodb:GetItem
                 - dynamodb:PutItem
                 - dynamodb:UpdateItem
-              Resource: !Sub 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/farmer_profiles'
+                - dynamodb:DeleteItem
+              Resource:
+                - !Sub 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/farmer_profiles'
+                - !Sub 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/otp_codes'
+            - Effect: Allow
+              Action:
+                - sns:Publish
+                - sns:GetSMSAttributes
+                - sns:CreateSMSSandboxPhoneNumber
+                - sns:VerifySMSSandboxPhoneNumber
+                - sns:DeleteSMSSandboxPhoneNumber
+                - sns:GetSMSSandboxAccountStatus
+                - sns:ListSMSSandboxPhoneNumbers
+                - sms-voice:DescribeAccountAttributes
+                - sms-voice:DescribeVerifiedDestinationNumbers
+                - sms-voice:CreateVerifiedDestinationNumber
+                - sms-voice:VerifyDestinationNumber
+                - sms-voice:DeleteVerifiedDestinationNumber
+                - cloudwatch:GetMetricStatistics
+              Resource: '*'
       Events:
         ProfileGetApi:
           Type: Api
@@ -319,6 +341,26 @@ Resources:
           Type: Api
           Properties:
             Path: /profile/{farmerId}
+            Method: options
+        OtpSendApi:
+          Type: Api
+          Properties:
+            Path: /otp/send
+            Method: post
+        OtpVerifyApi:
+          Type: Api
+          Properties:
+            Path: /otp/verify
+            Method: post
+        OtpOptions:
+          Type: Api
+          Properties:
+            Path: /otp/send
+            Method: options
+        OtpVerifyOptions:
+          Type: Api
+          Properties:
+            Path: /otp/verify
             Method: options
 
   TranscribeSpeechFunction:
