feat: enterprise guardrails — 7 security gaps closed
Enterprise-grade guardrails for the cognitive multi-agent pipeline:

Gap #1 - PII Detection & Masking (utils/guardrails.py):
  Aadhaar, phone, PAN, bank account, email, IFSC detection + masking
  PII never appears in logs — only masked versions

Gap #2 - Prompt Injection Defense (utils/guardrails.py):
  Detects instruction override, role hijacking, system prompt extraction,
  data exfiltration attempts, code execution, obfuscated attacks

Gap #3 - Rate Limiting (utils/rate_limiter.py):
  DynamoDB-backed per-farmer throttle: 15/min, 120/hr, 500/day
  New 'rate_limits' table with TTL auto-cleanup. Fail-open design.

Gap #4 - Input Length Validation (utils/guardrails.py):
  2000 char max, control character stripping, null byte removal

Gap #5 - Bedrock Guardrails Integration:
  Created AWS Bedrock Guardrail (qv5u26hasjmp v1) with:
  - Content filters: hate, insults, sexual, violence, misconduct, prompt_attack
  - Topic policies: deny non-agricultural + harmful agriculture content
  - PII filters: Aadhaar, PAN, IFSC, email, phone, bank accounts (ANONYMIZE)
  - Word filters: banned pesticides + profanity
  Attached to all converse() calls via guardrailConfig

Gap #6 - Structured Audit Trail (utils/audit_logger.py):
  JSON audit logs for every: request start, guardrail block, PII detection,
  tool invocation, policy decision, request completion, Bedrock guardrail event
  Separate AUDIT logger for compliance filtering

Gap #7 - Toxicity/Harmful Content Filter (utils/guardrails.py):
  Harm to people, crop sabotage, banned pesticides, environmental harm,
  self-harm (with Kisan helpline + iCall + Vandrevala Foundation numbers),
  hate speech in agriculture context

All guardrails wired into handler.py at correct pipeline stages.
Tested: 5/5 scenarios pass (normal, injection, toxicity, length, off-topic)

--- a/infrastructure/template.yaml
+++ b/infrastructure/template.yaml
@@ -31,6 +31,11 @@ Globals:
         PIPELINE_MODE: !Ref PipelineMode
         ENABLE_SPECIALIST_FANOUT: !Ref EnableSpecialistFanout
         ENFORCE_CODE_POLICY: !Ref EnforceCodePolicy
+        # Enterprise Guardrails
+        BEDROCK_GUARDRAIL_ID: !Ref BedrockGuardrailId
+        BEDROCK_GUARDRAIL_VERSION: !Ref BedrockGuardrailVersion
+        ENABLE_RATE_LIMITING: 'true'
+        DYNAMODB_RATE_LIMIT_TABLE: rate_limits
 
 Parameters:
   BedrockAgentId:
@@ -131,6 +136,7 @@ Resources:
                 - bedrock:InvokeModel
                 - bedrock:Converse
                 - bedrock:ConverseStream
+                - bedrock:ApplyGuardrail
               Resource: '*'
             - Effect: Allow
               Action:
@@ -161,9 +167,11 @@ Resources:
                 - dynamodb:PutItem
                 - dynamodb:GetItem
                 - dynamodb:Query
+                - dynamodb:UpdateItem
               Resource:
                 - !Sub 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/chat_sessions'
                 - !Sub 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/farmer_profiles'
+                - !Sub 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/rate_limits'
       Events:
         ChatApi:
           Type: Api
